--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,6 +26,17 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.commons-logging-1.2.jar=D:\\!course\\FPT\\lib\\login-google\\commons-logging-1.2.jar
+file.reference.core-3.5.1.jar=D:\\!course\\FPT\\lib\\login-google\\core-3.5.1.jar
+file.reference.fluent-hc-4.5.5.jar=D:\\!course\\FPT\\lib\\login-google\\fluent-hc-4.5.5.jar
+file.reference.gson-2.8.2.jar=D:\\!course\\FPT\\lib\\login-google\\gson-2.8.2.jar
+file.reference.httpclient-4.5.5.jar=D:\\!course\\FPT\\lib\\login-google\\httpclient-4.5.5.jar
+file.reference.httpcore-4.4.9.jar=D:\\!course\\FPT\\lib\\login-google\\httpcore-4.4.9.jar
+file.reference.jakarta.servlet.jsp.jstl-3.0.1.jar=D:\\!course\\FPT\\lib\\jakarta.servlet.jsp.jstl-3.0.1.jar
+file.reference.jakarta.servlet.jsp.jstl-api-3.0.2.jar=D:\\!course\\FPT\\lib\\jakarta.servlet.jsp.jstl-api-3.0.2.jar
+file.reference.javase-3.5.1.jar=D:\\!course\\FPT\\lib\\login-google\\javase-3.5.1.jar
+file.reference.json-simple-1.1.1.jar=D:\\!course\\FPT\\lib\\login-google\\json-simple-1.1.1.jar
+file.reference.mssql-jdbc-12.8.1.jre8.jar=D:\\!course\\FPT\\lib\\sqljdbc_12.8\\enu\\jars\\mssql-jdbc-12.8.1.jre8.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -34,7 +45,18 @@ j2ee.platform=11-web
 j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.34.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.8-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote-ffm.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar:${j2ee.server.home}/lib/websocket-client-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jakarta.servlet.jsp.jstl-3.0.1.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-3.0.2.jar}:\
+    ${file.reference.mssql-jdbc-12.8.1.jre8.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.core-3.5.1.jar}:\
+    ${file.reference.fluent-hc-4.5.5.jar}:\
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.httpclient-4.5.5.jar}:\
+    ${file.reference.httpcore-4.4.9.jar}:\
+    ${file.reference.javase-3.5.1.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
